SpecificationGrammar/SpecificationGrammarParser.py
# Generated from SpecificationGrammar.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class SpecificationGrammarParser ( Parser ):

    grammarFileName = "SpecificationGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"')'", u"'DC['", u"'|'", u"']'", 
                     u"';'", u"'and'", u"'or'", u"'not'", u"'true'", u"'false'", 
                     u"'impl'", u"'iff'", u"'<='", u"'='", u"'>='", u"'<'", 
                     u"'>'", u"'!='", u"'+'", u"'-'", u"'*'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"AND", 
                      u"OR", u"NOT", u"TRUE", u"FALSE", u"IMPL", u"IFF", 
                      u"LEQ", u"EQ", u"GEQ", u"LT", u"GT", u"NEQ", u"PLUS", 
                      u"MINUS", u"TIMES", u"ID", u"INT", u"WS" ]

    RULE_spec = 0
    RULE_expr = 1
    RULE_resourceFilter = 2
    RULE_specNoDC = 3
    RULE_exprNoDC = 4
    RULE_op = 5
    RULE_arithmetic_op = 6
    RULE_bool2Op = 7
    RULE_bool1Op = 8
    RULE_boolFact = 9

    ruleNames =  [ u"spec", u"expr", u"resourceFilter", u"specNoDC", u"exprNoDC", 
                   u"op", u"arithmetic_op", u"bool2Op", u"bool1Op", u"boolFact" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    AND=7
    OR=8
    NOT=9
    TRUE=10
    FALSE=11
    IMPL=12
    IFF=13
    LEQ=14
    EQ=15
    GEQ=16
    LT=17
    GT=18
    NEQ=19
    PLUS=20
    MINUS=21
    TIMES=22
    ID=23
    INT=24
    WS=25

    def __init__(self, input):
        super(SpecificationGrammarParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SpecContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SpecificationGrammarParser.SpecContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SpecificationGrammarParser.RULE_spec

     
        def copyFrom(self, ctx):
            super(SpecificationGrammarParser.SpecContext, self).copyFrom(ctx)


    class AspecOpContext(SpecContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecContext)
            super(SpecificationGrammarParser.AspecOpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.ExprContext,i)

        def op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.OpContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAspecOp"):
                listener.enterAspecOp(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAspecOp"):
                listener.exitAspecOp(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAspecOp"):
                return visitor.visitAspecOp(self)
            else:
                return visitor.visitChildren(self)


    class AspecBracketsContext(SpecContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecContext)
            super(SpecificationGrammarParser.AspecBracketsContext, self).__init__(parser)
            self.copyFrom(ctx)

        def spec(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.SpecContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAspecBrackets"):
                listener.enterAspecBrackets(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAspecBrackets"):
                listener.exitAspecBrackets(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAspecBrackets"):
                return visitor.visitAspecBrackets(self)
            else:
                return visitor.visitChildren(self)


    class AspecBool1OpContext(SpecContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecContext)
            super(SpecificationGrammarParser.AspecBool1OpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def bool1Op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.Bool1OpContext,0)

        def spec(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.SpecContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAspecBool1Op"):
                listener.enterAspecBool1Op(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAspecBool1Op"):
                listener.exitAspecBool1Op(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAspecBool1Op"):
                return visitor.visitAspecBool1Op(self)
            else:
                return visitor.visitChildren(self)


    class AspecBoolFactContext(SpecContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecContext)
            super(SpecificationGrammarParser.AspecBoolFactContext, self).__init__(parser)
            self.copyFrom(ctx)

        def boolFact(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.BoolFactContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAspecBoolFact"):
                listener.enterAspecBoolFact(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAspecBoolFact"):
                listener.exitAspecBoolFact(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAspecBoolFact"):
                return visitor.visitAspecBoolFact(self)
            else:
                return visitor.visitChildren(self)


    class AspecBool2OpContext(SpecContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecContext)
            super(SpecificationGrammarParser.AspecBool2OpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def spec(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.SpecContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.SpecContext,i)

        def bool2Op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.Bool2OpContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAspecBool2Op"):
                listener.enterAspecBool2Op(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAspecBool2Op"):
                listener.exitAspecBool2Op(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAspecBool2Op"):
                return visitor.visitAspecBool2Op(self)
            else:
                return visitor.visitChildren(self)



    def spec(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SpecificationGrammarParser.SpecContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_spec, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            token = self._input.LA(1)
            if token in [SpecificationGrammarParser.NOT]:
                localctx = SpecificationGrammarParser.AspecBool1OpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 21
                self.bool1Op()
                self.state = 22
                self.spec(4)

            elif token in [SpecificationGrammarParser.T__0]:
                localctx = SpecificationGrammarParser.AspecBracketsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 24
                self.match(SpecificationGrammarParser.T__0)
                self.state = 25
                self.spec(0)
                self.state = 26
                self.match(SpecificationGrammarParser.T__1)

            elif token in [SpecificationGrammarParser.TRUE]:
                localctx = SpecificationGrammarParser.AspecBoolFactContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 28
                self.boolFact()

            elif token in [SpecificationGrammarParser.T__2, SpecificationGrammarParser.ID, SpecificationGrammarParser.INT]:
                localctx = SpecificationGrammarParser.AspecOpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 29
                self.expr(0)
                self.state = 30
                self.op()
                self.state = 31
                self.expr(0)

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SpecificationGrammarParser.AspecBool2OpContext(self, SpecificationGrammarParser.SpecContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_spec)
                    self.state = 35
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 36
                    self.bool2Op()
                    self.state = 37
                    self.spec(6) 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SpecificationGrammarParser.ExprContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SpecificationGrammarParser.RULE_expr

     
        def copyFrom(self, ctx):
            super(SpecificationGrammarParser.ExprContext, self).copyFrom(ctx)


    class AexprArithmeticContext(ExprContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprContext)
            super(SpecificationGrammarParser.AexprArithmeticContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.ExprContext,i)

        def arithmetic_op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.Arithmetic_opContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAexprArithmetic"):
                listener.enterAexprArithmetic(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAexprArithmetic"):
                listener.exitAexprArithmetic(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAexprArithmetic"):
                return visitor.visitAexprArithmetic(self)
            else:
                return visitor.visitChildren(self)


    class AexprDCNoFilterContext(ExprContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprContext)
            super(SpecificationGrammarParser.AexprDCNoFilterContext, self).__init__(parser)
            self.copyFrom(ctx)

        def specNoDC(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.SpecNoDCContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAexprDCNoFilter"):
                listener.enterAexprDCNoFilter(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAexprDCNoFilter"):
                listener.exitAexprDCNoFilter(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAexprDCNoFilter"):
                return visitor.visitAexprDCNoFilter(self)
            else:
                return visitor.visitChildren(self)


    class AexprDCContext(ExprContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprContext)
            super(SpecificationGrammarParser.AexprDCContext, self).__init__(parser)
            self.copyFrom(ctx)

        def resourceFilter(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.ResourceFilterContext,0)

        def specNoDC(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.SpecNoDCContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAexprDC"):
                listener.enterAexprDC(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAexprDC"):
                listener.exitAexprDC(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAexprDC"):
                return visitor.visitAexprDC(self)
            else:
                return visitor.visitChildren(self)


    class AexprNoDCContext(ExprContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprContext)
            super(SpecificationGrammarParser.AexprNoDCContext, self).__init__(parser)
            self.copyFrom(ctx)

        def exprNoDC(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.ExprNoDCContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAexprNoDC"):
                listener.enterAexprNoDC(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAexprNoDC"):
                listener.exitAexprNoDC(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAexprNoDC"):
                return visitor.visitAexprNoDC(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SpecificationGrammarParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = SpecificationGrammarParser.AexprDCContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 45
                self.match(SpecificationGrammarParser.T__2)
                self.state = 46
                self.resourceFilter(0)
                self.state = 47
                self.match(SpecificationGrammarParser.T__3)
                self.state = 48
                self.specNoDC(0)
                self.state = 49
                self.match(SpecificationGrammarParser.T__4)
                pass

            elif la_ == 2:
                localctx = SpecificationGrammarParser.AexprDCNoFilterContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 51
                self.match(SpecificationGrammarParser.T__2)
                self.state = 52
                self.specNoDC(0)
                self.state = 53
                self.match(SpecificationGrammarParser.T__4)
                pass

            elif la_ == 3:
                localctx = SpecificationGrammarParser.AexprNoDCContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 55
                self.exprNoDC(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 64
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SpecificationGrammarParser.AexprArithmeticContext(self, SpecificationGrammarParser.ExprContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 58
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 59
                    self.arithmetic_op()
                    self.state = 60
                    self.expr(3) 
                self.state = 66
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ResourceFilterContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SpecificationGrammarParser.ResourceFilterContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SpecificationGrammarParser.RULE_resourceFilter

     
        def copyFrom(self, ctx):
            super(SpecificationGrammarParser.ResourceFilterContext, self).copyFrom(ctx)


    class AresourceFilterBool2OpContext(ResourceFilterContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ResourceFilterContext)
            super(SpecificationGrammarParser.AresourceFilterBool2OpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def resourceFilter(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.ResourceFilterContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.ResourceFilterContext,i)


        def enterRule(self, listener):
            if hasattr(listener, "enterAresourceFilterBool2Op"):
                listener.enterAresourceFilterBool2Op(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAresourceFilterBool2Op"):
                listener.exitAresourceFilterBool2Op(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAresourceFilterBool2Op"):
                return visitor.visitAresourceFilterBool2Op(self)
            else:
                return visitor.visitChildren(self)


    class AresourceFilterOpContext(ResourceFilterContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ResourceFilterContext)
            super(SpecificationGrammarParser.AresourceFilterOpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SpecificationGrammarParser.ID, 0)
        def op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.OpContext,0)

        def INT(self):
            return self.getToken(SpecificationGrammarParser.INT, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterAresourceFilterOp"):
                listener.enterAresourceFilterOp(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAresourceFilterOp"):
                listener.exitAresourceFilterOp(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAresourceFilterOp"):
                return visitor.visitAresourceFilterOp(self)
            else:
                return visitor.visitChildren(self)



    def resourceFilter(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SpecificationGrammarParser.ResourceFilterContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_resourceFilter, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = SpecificationGrammarParser.AresourceFilterOpContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 68
            self.match(SpecificationGrammarParser.ID)
            self.state = 69
            self.op()
            self.state = 70
            self.match(SpecificationGrammarParser.INT)
            self._ctx.stop = self._input.LT(-1)
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SpecificationGrammarParser.AresourceFilterBool2OpContext(self, SpecificationGrammarParser.ResourceFilterContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_resourceFilter)
                    self.state = 72
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 73
                    self.match(SpecificationGrammarParser.T__5)
                    self.state = 74
                    self.resourceFilter(2) 
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class SpecNoDCContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SpecificationGrammarParser.SpecNoDCContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SpecificationGrammarParser.RULE_specNoDC

     
        def copyFrom(self, ctx):
            super(SpecificationGrammarParser.SpecNoDCContext, self).copyFrom(ctx)


    class AspecNoDCBool1OpContext(SpecNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecNoDCContext)
            super(SpecificationGrammarParser.AspecNoDCBool1OpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def bool1Op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.Bool1OpContext,0)

        def specNoDC(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.SpecNoDCContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAspecNoDCBool1Op"):
                listener.enterAspecNoDCBool1Op(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAspecNoDCBool1Op"):
                listener.exitAspecNoDCBool1Op(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAspecNoDCBool1Op"):
                return visitor.visitAspecNoDCBool1Op(self)
            else:
                return visitor.visitChildren(self)


    class AspecNoDCBracketsContext(SpecNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecNoDCContext)
            super(SpecificationGrammarParser.AspecNoDCBracketsContext, self).__init__(parser)
            self.copyFrom(ctx)

        def specNoDC(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.SpecNoDCContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAspecNoDCBrackets"):
                listener.enterAspecNoDCBrackets(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAspecNoDCBrackets"):
                listener.exitAspecNoDCBrackets(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAspecNoDCBrackets"):
                return visitor.visitAspecNoDCBrackets(self)
            else:
                return visitor.visitChildren(self)


    class AspecNoDCBool2OpContext(SpecNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecNoDCContext)
            super(SpecificationGrammarParser.AspecNoDCBool2OpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def specNoDC(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.SpecNoDCContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.SpecNoDCContext,i)

        def bool2Op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.Bool2OpContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAspecNoDCBool2Op"):
                listener.enterAspecNoDCBool2Op(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAspecNoDCBool2Op"):
                listener.exitAspecNoDCBool2Op(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAspecNoDCBool2Op"):
                return visitor.visitAspecNoDCBool2Op(self)
            else:
                return visitor.visitChildren(self)


    class AspecNoDCBoolFactContext(SpecNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecNoDCContext)
            super(SpecificationGrammarParser.AspecNoDCBoolFactContext, self).__init__(parser)
            self.copyFrom(ctx)

        def boolFact(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.BoolFactContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAspecNoDCBoolFact"):
                listener.enterAspecNoDCBoolFact(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAspecNoDCBoolFact"):
                listener.exitAspecNoDCBoolFact(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAspecNoDCBoolFact"):
                return visitor.visitAspecNoDCBoolFact(self)
            else:
                return visitor.visitChildren(self)


    class AspecNoDCOpContext(SpecNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecNoDCContext)
            super(SpecificationGrammarParser.AspecNoDCOpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def exprNoDC(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.ExprNoDCContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.ExprNoDCContext,i)

        def op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.OpContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAspecNoDCOp"):
                listener.enterAspecNoDCOp(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAspecNoDCOp"):
                listener.exitAspecNoDCOp(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAspecNoDCOp"):
                return visitor.visitAspecNoDCOp(self)
            else:
                return visitor.visitChildren(self)



    def specNoDC(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SpecificationGrammarParser.SpecNoDCContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_specNoDC, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            token = self._input.LA(1)
            if token in [SpecificationGrammarParser.NOT]:
                localctx = SpecificationGrammarParser.AspecNoDCBool1OpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 81
                self.bool1Op()
                self.state = 82
                self.specNoDC(4)

            elif token in [SpecificationGrammarParser.T__0]:
                localctx = SpecificationGrammarParser.AspecNoDCBracketsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 84
                self.match(SpecificationGrammarParser.T__0)
                self.state = 85
                self.specNoDC(0)
                self.state = 86
                self.match(SpecificationGrammarParser.T__1)

            elif token in [SpecificationGrammarParser.TRUE]:
                localctx = SpecificationGrammarParser.AspecNoDCBoolFactContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 88
                self.boolFact()

            elif token in [SpecificationGrammarParser.ID, SpecificationGrammarParser.INT]:
                localctx = SpecificationGrammarParser.AspecNoDCOpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 89
                self.exprNoDC(0)
                self.state = 90
                self.op()
                self.state = 91
                self.exprNoDC(0)

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SpecificationGrammarParser.AspecNoDCBool2OpContext(self, SpecificationGrammarParser.SpecNoDCContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_specNoDC)
                    self.state = 95
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 96
                    self.bool2Op()
                    self.state = 97
                    self.specNoDC(6) 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ExprNoDCContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SpecificationGrammarParser.ExprNoDCContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SpecificationGrammarParser.RULE_exprNoDC

     
        def copyFrom(self, ctx):
            super(SpecificationGrammarParser.ExprNoDCContext, self).copyFrom(ctx)


    class AexprNoDCServiceContext(ExprNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprNoDCContext)
            super(SpecificationGrammarParser.AexprNoDCServiceContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SpecificationGrammarParser.ID, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterAexprNoDCService"):
                listener.enterAexprNoDCService(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAexprNoDCService"):
                listener.exitAexprNoDCService(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAexprNoDCService"):
                return visitor.visitAexprNoDCService(self)
            else:
                return visitor.visitChildren(self)


    class AexprNoDCArithmeticContext(ExprNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprNoDCContext)
            super(SpecificationGrammarParser.AexprNoDCArithmeticContext, self).__init__(parser)
            self.copyFrom(ctx)

        def exprNoDC(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.ExprNoDCContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.ExprNoDCContext,i)

        def arithmetic_op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.Arithmetic_opContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterAexprNoDCArithmetic"):
                listener.enterAexprNoDCArithmetic(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAexprNoDCArithmetic"):
                listener.exitAexprNoDCArithmetic(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAexprNoDCArithmetic"):
                return visitor.visitAexprNoDCArithmetic(self)
            else:
                return visitor.visitChildren(self)


    class AexprNoDCIntContext(ExprNoDCContext):
